<resources>
    <string name="app_name">Akamia</string>
    <string name="detail_name">Room Schedule</string>

    <string name="no_sensors_stored">You have 0 beacons active.</string>

    <string name="far">Far</string>
    <string name="near">Near</string>
    <string name="close">At beacon</string>

    <string name="title_scan">Scan</string>
    <string name="title_stop">Stop</string>
    <string name="title_log">Log</string>

    <string name="action_refresh_view">Refresh</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3-day view</string>
    <string name="action_week_view">Week view</string>

    <string name="book_time">Book Time</string>
    <string name="title_activity_book_event">Book Event</string>
    <string name="title_activity_edit_event">Edit Event</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>

    <string name="event_title">Untitled event</string>
    <string name="timezone_dialog_title">Select TimeZone</string>
    <string name="prompt">Choose an account</string>

    <string name="txt_from">From</string>
    <string name="txt_to">To</string>
    <string name="txt_where">Where</string>
    <string name="txt_who">Who</string>
    <string name="txt_timezone">Time\nZone</string>
    <string name="txt_location">Location</string>
    <string name="txt_account">Account</string>
    <string name="txt_title">Title</string>
    <string name="rssi">RSSI:</string>

    <string name="separate">|</string>
    <string name="link_accept">&lt;u>Accept&lt;/u></string>
    <string name="link_delete">&lt;u>Delete&lt;/u></string>
    <string name="link_refuse">&lt;u>Refuse&lt;/u></string>
    <string name="link_close">&lt;u>Close&lt;/u></string>
    <string name="link_edit">&lt;u>Edit &#62;&#62;&lt;/u></string>
</resources>
