<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.shaka.akamia.EditEventActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text = "@string/txt_title"
        android:textSize="8pt"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText1"
        android:labelFor="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:singleLine="true"
        android:inputType="text"
        android:layout_below="@+id/title_text" />

    <View style="@style/Divider"
        android:id="@+id/divider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/editText1"/>

    <TextView
        android:id="@+id/location_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="8pt"
        android:text = "@string/txt_location"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/divider"
        android:layout_alignBaseline="@+id/location" />

    <TextView
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_toEndOf="@+id/location_text" />

    <View style="@style/Divider"
        android:id="@+id/divider2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/location"/>

    <TextView
        android:id="@+id/from_text"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_from"
        android:textStyle="bold"
        android:textSize="8pt"
        android:layout_below="@+id/divider2"
        android:layout_alignBaseline="@+id/from_date" />

    <Button
        android:id="@+id/from_date"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_below="@+id/divider2"
        android:layout_toEndOf="@id/from_text" />

    <Button
        android:id="@+id/from_time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_toEndOf="@id/from_date" />

    <TextView
        android:id="@+id/to_text"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_to"
        android:textStyle="bold"
        android:textSize="8pt"
        android:layout_below="@+id/from_text"
        android:layout_alignBaseline="@+id/to_date" />

    <Button
        android:id="@+id/to_date"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_below="@+id/from_date"
        android:layout_toEndOf="@id/to_text" />

    <Button
        android:id="@+id/to_time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from_time"
        android:layout_toEndOf="@id/to_date" />

    <TextView
        android:id="@+id/timezone_text"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_timezone"
        android:textStyle="bold"
        android:textSize="8pt"
        android:layout_below="@+id/to_text"
        android:layout_alignTop="@+id/timezone" />

    <Button
        android:id="@+id/timezone"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to_date"
        android:layout_toEndOf="@id/timezone_text" />

    <View style="@style/Divider"
        android:id="@+id/divider3"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/timezone"/>

    <TextView
        android:id="@+id/account_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="8pt"
        android:text = "@string/txt_account"
        android:layout_below="@+id/divider3"/>

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/divider3"
        android:layout_toEndOf="@+id/account_text"/>

</RelativeLayout>
