<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_where"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/where_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/where"
        android:layout_toEndOf="@+id/who" />

    <TextView
        android:id="@+id/who"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/txt_who"
        android:textStyle="bold"
        android:layout_below="@+id/where"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/who_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/who"
        android:layout_toEndOf="@+id/who" />

    <View style="@style/Divider"
        android:id="@+id/divider"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/who"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/accept"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#0000FF"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/divider" />

    <TextView
        android:id="@+id/separate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_toEndOf="@+id/accept"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/separate"
        android:layout_below="@+id/divider" />

    <TextView
        android:id="@+id/refuse"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#0000FF"
        android:layout_toEndOf="@+id/separate"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/divider" />


    <TextView
        android:id="@+id/actionLink"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#0000FF"
        android:layout_alignEnd="@+id/divider"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/divider" />

</RelativeLayout>
